--- a/index.html
+++ b/index.html
@@ -1,6 +1,37 @@
 <html>
-    <head> Portia's TechReturners To Do Application
+    <head> 
+        <title>Portia's My ToDo Application 
+        </title>
     </head>
     <body>
+        <h1>My ToDo Application
+        </h1>
+        <br>
+        <input>
+        <button type="button">ADD</button>
+        <br>
+        <br>
+        <table>
+                <tr>
+                  <th>Things To Do:</th>
+                  <th>2</th> 
+                </tr>
+                
+        </table>
+        <br>
+        <br>
+              <table style="width:50%">
+                    <tr>
+                      <td>A FIRST TASK</td>                    
+                      <td><button type="button">DONE</button></td> 
+                      <td><button type="button">DELETE</button></td>
+                    </tr>
+                    <tr>
+                      <td>A SECOND TASK</td>
+                      <td><button type="button">DONE</button></td>
+                      <td><button type="button">DELETE</button></td>
+                    </tr>
+        </table>
+
     </body>
 </html>
