Updated index file and the Drawing and Dynamic Documents

--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
 <html>
     <head> 
-        <title>Portia's My ToDo Application 
-        </title>
+        <title>Portia's My ToDo Application</title>
     </head>
     <body>
-        <h1>My ToDo Application
-        </h1>
+        <h1>My ToDo Application</h1>
         <br>
         <!-- Im unsure about this action tag which is looking 
             at an action.php page that I haven't created, also where and how are
@@ -16,8 +14,7 @@
         </form>
         <br>
         <p>
-            <b>THINGS TO DO: 2
-            </b>
+            <b>THINGS TO DO: 2</b>
         </p>
         <table>
                 <tr>
