Latest index.html

--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
     <body>
         <h1>My ToDo Application</h1>
         <br>
-        <!-- Im unsure about this action tag which is looking 
-            at an action.php page that I haven't created, also where and how are
+        <!-- Im unsure about this form tag which doesn't seem to show where and how are
             the choices being made here passed to anywhere -->
-        <form action="/action_page.php">
+        <form>
         <input type="text" name="Task input box" value="">
         <input type="submit" value="ADD">
         </form>
@@ -20,11 +19,11 @@
                 <tr>
                       <td><b>A FIRST TASK</b></td> 
                       <!-- As above, how is this working and where is it going? -->
-                        <form action="/action_page.php">
+                        <form>
                       <td><input type="submit" value="DONE"></td> 
                       </form>
                       <!-- As above, how is this working - where is it going? -->
-                      <form action="/action_page.php">
+                      <form>
                       <td><input type="submit" value="DELETE"></td>
                       </form>
                 </tr>
@@ -32,11 +31,11 @@
                      <b>
                       <td><b>A SECOND TASK</b></td>
                       <!-- As above, how is this working and where is it going? -->
-                      <form action="/action_page.php">
+                      <form>
                       <td><input type="submit" value="DONE"></td>
                      </form>
                      <!-- As above, how is this working and where is it going? -->
-                     <form action="/action_page.php">
+                     <form>
                       <td><input type="submit" value="DELETE"></td>
                      </form>
                       </b>
