Index.html file updated again

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <table>
                 <tr>
                       <td><b>A FIRST TASK</b></td> 
-                      <!-- As above, how is this working and where is it going? -->
+                      <!-- As above, how is this working and how is it functioning? -->
                         <form>
                       <td><input type="submit" value="DONE"></td> 
                       </form>
-                      <!-- As above, how is this working - where is it going? -->
+                      <!-- As above, how is this working and how is it functioning? -->
                       <form>
                       <td><input type="submit" value="DELETE"></td>
                       </form>
@@ -30,11 +30,11 @@
                 <tr>
                      <b>
                       <td><b>A SECOND TASK</b></td>
-                      <!-- As above, how is this working and where is it going? -->
+                      <!-- As above, how is this working and how is it functioning? -->
                       <form>
                       <td><input type="submit" value="DONE"></td>
                      </form>
-                     <!-- As above, how is this working and where is it going? -->
+                     <!-- As above, how is this working and how is it functioning? -->
                      <form>
                       <td><input type="submit" value="DELETE"></td>
                      </form>
