--- a/index.html
+++ b/index.html
@@ -1,46 +1,103 @@
 <html>
-    <head> 
-        <title>Portia's My ToDo Application</title>
-    </head>
-    <body>
-        <h1>My ToDo Application</h1>
-        <br>
-        <!-- Im unsure about this form tag which doesn't seem to show where and how are
-            the choices being made here passed to anywhere -->
-        <form>
-        <input type="text" name="Task input box" value="">
-        <input type="submit" value="ADD">
-        </form>
-        <br>
-        <p>
-            <b>THINGS TO DO: 2</b>
-        </p>
-        <table>
-                <tr>
-                      <td><b>A FIRST TASK</b></td> 
-                      <!-- As above, how is this working and how is it functioning? -->
-                        <form>
-                      <td><input type="submit" value="DONE"></td> 
-                      </form>
-                      <!-- As above, how is this working and how is it functioning? -->
-                      <form>
-                      <td><input type="submit" value="DELETE"></td>
-                      </form>
-                </tr>
-                <tr>
-                     <b>
-                      <td><b>A SECOND TASK</b></td>
-                      <!-- As above, how is this working and how is it functioning? -->
-                      <form>
-                      <td><input type="submit" value="DONE"></td>
-                     </form>
-                     <!-- As above, how is this working and how is it functioning? -->
-                     <form>
-                      <td><input type="submit" value="DELETE"></td>
-                     </form>
-                      </b>
-                </tr>
-        </table>
 
-    </body>
+<head>
+    <title>Portia's My To Do Application</title>
+    <!-- This is how you link to a SEPARATE STYLE SHEET 
+        that formats your page -->
+    <link rel="stylesheet" type="text/css" href="styles.css">
+
+    <style>
+        /* If you don't use a separate style sheet file 
+        you can set your styles in the main head tag here
+        h1 {
+            color: green;
+            font-family: 'Courier New', Courier, monospace;
+        } */
+    </style>
+</head>
+
+<body>
+    <!-- DIVs are BLOCK LEVEL ELEMENTS 
+        They are POSITIONAL ELEMENTS that help to determine where stuff is
+        They are used in place of things like TABLES as they are easier to 
+        use when differentiating between devices etc -->
+    <!-- <This is how you can individually style a heading if 
+        you want it different to the overall style definition 
+        h1 style="color: red; font-family: 'Courier New', Courier, monospace;">My ToDo Application</h1> -->
+    <div id="div1" class="my-div">
+        <h1>My To Do Application</h1>
+    </div>
+    <br>
+    <p>
+        <div id="div1" class="my-div">
+            <h3>Please Enter a Task</h2>
+                <form>
+                    <input type="text" name="Task input box" value="">
+                    <input type="submit" value="ADD">
+                </form>
+        </div>
+    </p>
+
+
+    <!-- SPAN tags only take up the amount of space needed 
+        to hold whatever the content is -->
+    <!-- <span class="my_span">
+      Just Checking
+  </span>  
+  <span class="my-span">
+      Some more Text
+  </span>
+  <span class="my-span">
+      Even more Span Text to Try
+  </span> -->
+    <!-- Im unsure about this form tag which doesn't seem to show where and how are
+            the choices being made here passed to anywhere -->
+
+    <br>
+    <p>
+        <div id="div1" class="my-div">
+            <b>THINGS TO DO: 2
+                <p>A FIRST TASK
+                    <input type="submit" value="DONE">
+                    <input type="submit" value="DELETE">
+                </p>
+                <p>A SECOND TASK
+                    <input type="submit" value="DONE">
+                    <input type="submit" value="DELETE">
+                </p>
+            </b></div>
+    </p>
+
+    <!-- Ignore the table stuff now as using DIV tags instead -->
+    <!-- People tend to use CLASS even when there 
+            is just one as it helps to reduce errors -->
+    <!-- <table>
+        <tr class="task-row">
+            <td><b>A FIRST TASK</b></td>
+             As above, how is this working and how is it functioning?
+            <form>
+                    <input type="submit" value="DONE">
+                    </form>
+            As above, how is this working and how is it functioning?
+            <form>
+                <td><input type="submit" value="DELETE"></td>
+            </form>
+        </tr>
+        <tr class="task-row">
+            <b>
+                 This code here overwrites the CLASS by setting it 
+                    with an ID
+                <td id="second-row" class="task-row">A SECOND TASK</td>
+                <td><input type="submit" value="DONE"></td>
+                </form>
+                 As above, how is this working and how is it functioning?
+                <form>
+                    <td><input type="submit" value="DELETE"></td>
+                </form>
+            </b>
+        </tr>
+    </table> -->
+
+</body>
+
 </html>
